--- a/mywebsite/chat/templates/chat/lobby.html
+++ b/mywebsite/chat/templates/chat/lobby.html
@@ -7,5 +7,17 @@
   </head>
   <body>
     <h1>Welcome to chat application!</h1>
+
+    <!-- for the chat logic -->
+    <script>
+      let url = "ws://${window.location.host}/ws/socket-server/";
+
+      const chatSocket = new WebSocket(url);
+
+      chatSocket.onmessage = function (e) {
+        let data = JSON.parse(e.data);
+        console.log("Data: ", data);
+      };
+    </script>
   </body>
 </html>
